--- a/src/styles/components/_modals.scss
+++ b/src/styles/components/_modals.scss
@@ -144,7 +144,11 @@
   .modal {
     width: calc(100vw - 3rem);
     left: 1.5rem;
-    top: .5rem;
+    top: 1rem;
+
+    h1 {
+      margin-bottom: .5rem;
+    }
 
     .gallery {
       .modalGalleryImgWrapper .postApplauseButton {
@@ -160,7 +164,7 @@
       padding-top: .5rem;
 
       textarea {
-        height: 3rem;
+        height: 2rem;
       }
     }
   }
